--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-slot": "^1.1.1",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
+    "firebase": "^11.1.0",
     "jose": "^5.2.2",
     "next": "14.1.0",
     "react": "^18",
