--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
     "firebase": "^11.1.0",
+    "framer-motion": "^11.14.4",
     "jose": "^5.2.2",
+    "lucide-react": "^0.468.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
