--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-merge": "^2.5.5"
+    "tailwind-merge": "^2.5.5",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.9",
