--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.5.5",
     "uuid": "^11.0.3"
   },
