--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@prisma/client": "^5.22.0",
     "@radix-ui/react-slot": "^1.1.1",
+    "@types/nodemailer": "^6.4.17",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -23,6 +24,7 @@
     "jose": "^5.2.2",
     "lucide-react": "^0.468.0",
     "next": "14.1.0",
+    "nodemailer": "^6.9.16",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
