--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jose": "^5.2.2",
     "lucide-react": "^0.468.0",
     "next": "14.1.0",
+    "next-auth": "^4.24.11",
     "nodemailer": "^6.9.16",
     "react": "^18",
     "react-dom": "^18",
@@ -32,7 +33,9 @@
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.5.5",
-    "uuid": "^11.0.3"
+    "uuid": "^11.0.3",
+    "zod": "^3.24.1",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.9",
